Fixed overflow on titles.

--- a/src-built-in/components/assets/css/_windowTitleBar.css
+++ b/src-built-in/components/assets/css/_windowTitleBar.css
@@ -312,7 +312,7 @@ html.desktop-active .fsbl-linker[hover=true] {
 }
 
 .fsbl-tab .fsbl-tab-title {
-    display:flex;
+    min-width: 0;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
